@@ -11,6 +11,7 @@ History:
       - Windows: use our own instances of GDI32 and User32 DLLs
       - doc: add project_urls to setup.cfg
       - doc: add an example using the multiprocessing module (closes #82)
+      - tests: added regression tests for #128 and #135
 
 4.0.2   2019/02/23
       - new contributor: foone
